argocd-grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpc-route
  namespace: argocd
spec:
  parentRefs:
    - name: argocd-gateway
      namespace: argocd
  rules:
    - backendRefs:
        - name: argo-cd-argocd-server
          port: 80
      matches:
        - method:
            service: session.SessionService
            method: Create
